infra/k8s/ingress-back-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-back-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: donate.com
      http:
        paths:
          - path: /api/users/*
            backend:
              serviceName: auth-srv
              servicePort: 3000
